# math

./: .gitignore  CMakeLists.txt  StanMathConfig.cmake
examples/: CMakeLists.txt  example.cpp
stan/math/prim/: eigen_plugins.h  fun.hpp
stan/math/prim/core/: init_threadpool_tbb.hpp
stan/math/prim/fun/: fft.hpp  lb_offset_multiplier_constrain.hpp  lb_offset_multiplier_free.hpp  lub_offset_multiplier_constrain.hpp  lub_offset_multiplier_free.hpp  ub_offset_multiplier_constrain.hpp  ub_offset_multiplier_free.hpp
stan/math/rev/fun/: fft.hpp
test/unit/math/mix/fun/: fft_test.cpp
test/unit/math/prim/fun/: lb_offset_multiplier_transform_test.cpp  lub_offset_multiplier_transform_test.cpp  ub_offset_multiplier_transform_test.cpp
test/unit/math/rev/: eigen_plugins_test.cpp
